--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -224,12 +224,14 @@ ul.home {
 	padding:0;
 }
 
+.home .menu-items{margin-left:0.25em}
 
 ul.box_menu li.item{
 	font-family: 'GoodDogRegular', Arial, sans-serif;
 	position:relative;
 	background: none repeat scroll 0 0 #63B362;
     border-radius: 0.4em;
+    behavior: url(/PIE.htc);
     float: left;
     margin: 0 0.12em 0.3em 0.12em;
     padding: 0;
@@ -244,11 +246,9 @@ ul.box_menu li.item{
 ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text,ul.box_menu li.item:hover dt, ul.box_menu li.item:hover dd, ul.box_menu li.item:hover dl{
 	opacity:1;
 	filter: alpha(opacity = 100);
-	background-color: #63B362;
  	border-bottom-left-radius: 0.4em;
  	border-bottom-right-radius: 0.4em; 	
-
-	
+    behavior: url(/PIE.htc);	
 	}
 	
 .box_menu .item .titre{
@@ -316,16 +316,27 @@ ul.box_menu li.item:hover ul{
  	border-bottom-right-radius: 0.4em;
 	padding-bottom:0.05em ;
  	}
-
+  ul.box_menu li.item:hover ul li.row_2{
+	background:#edc831;
+  	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;	
+  	}
  
  ul.box_menu li.item ul li.row_2 a{color:#f9ed72;}
  
+
+
+ul.box_menu li.item:hover .titre{
+	background:#99cc66;
+	border-top-left-radius: 0.4em;
+ 	border-top-right-radius: 0.4em;
+}
 
 /*Home Actus*/
 ul.box_menu dl {
 	background:#e93eda;
 	text-align:left;
-	padding:0.3em 0 0 0.3em;
+	padding-top:0.3em 0 0 0.3em;
 	margin:0;
 	height:	164px;
  	border-bottom-left-radius: 0.4em;
@@ -370,7 +381,7 @@ ul.box_menu li.site_slider .sjcycle_sites{
 	background-repeat:no-repeat;
 	background-position: 0 0.1em ;	
 	opacity:0.2;
-
+	filter: alpha(opacity = 20);
 }
 
 ul.box_menu li.site_slider:hover .slider,ul.box_menu li.site_slider:hover  .sjcycle_sites{
