--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -89,7 +89,9 @@ body {
 	position:relative;
 }
 
-.content p, .content dl{	font-size:1.2em;}
+.content p, .content dl, .content ul{	font-size:1.2em;}
+
+.home .content ul{font-size:1em;}
  
 .content dl p {
 	font-size: 0.9em;
@@ -224,7 +226,7 @@ ul.home {
 	padding:0;
 }
 
-.home .menu-items{margin-left:0.25em}
+.home .menu-items{margin-left:0.19em}
 
 ul.box_menu li.item{
 	font-family: 'GoodDogRegular', Arial, sans-serif;
@@ -245,6 +247,7 @@ ul.box_menu li.item{
     
 ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text,ul.box_menu li.item:hover dt, ul.box_menu li.item:hover dd, ul.box_menu li.item:hover dl{
 	opacity:1;
+	background-color:#63B362;
 	filter: alpha(opacity = 100);
  	border-bottom-left-radius: 0.4em;
  	border-bottom-right-radius: 0.4em; 	
@@ -336,9 +339,9 @@ ul.box_menu li.item:hover .titre{
 ul.box_menu dl {
 	background:#e93eda;
 	text-align:left;
-	padding-top:0.3em 0 0 0.3em;
+	padding:0.5em 0.3em 0.3em 0.3em;
 	margin:0;
-	height:	164px;
+	height:	134px;
  	border-bottom-left-radius: 0.4em;
  	border-bottom-right-radius: 0.4em;}
 	
@@ -347,7 +350,7 @@ ul.box_menu dt, ul.box_menu dd{
 	filter: alpha(opacity = 10);
 }	
 
-ul.box_menu dl dt{font-weight:normal; font-size:0.8em}
+ul.box_menu dl dt{font-weight:normal; font-size:0.8em;}
 
 ul.box_menu dl .spip_logos{
 	margin: 0 0.2em 0.1em 0;
