--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -93,7 +93,7 @@ body {
 	border-radius:1em;
 	margin:0;
 	width:61%;
-	padding: 0 1.3em 3em 1.3em; 
+	padding: 0 0 3em 0; 
 	behavior: url(/PIE.htc);
 	position:relative;
 }
@@ -113,7 +113,7 @@ body {
 	}
 	
 .content .content-principal{
-
+	padding: 0 1.3em; 
 }
 
 .chapo, .body_content{
@@ -586,6 +586,7 @@ ul.box_menu li.descriptif .text p{
 #extra2 ul.box_menu li.item ul{opacity:1;filter: alpha(opacity =100);}
 
 
+
 #extra2 ul.box_menu li.item li{background:#EDC831}
 
 #extra2 ul.box_menu li.item li.on{background:#F9ED72}
@@ -594,6 +595,14 @@ ul.box_menu li.descriptif .text p{
 #extra2 ul.box_menu li.item li a{color:#F9ED72}
 
 #extra2 ul.box_menu li.item li.on a,#extra2 ul.box_menu li.item li.on:hover a,#extra2 ul.box_menu li.item li.on:focus a,#extra2 ul.box_menu li.item li.on:active a{color:#EDC831}
+
+ ul.submenu {
+ 	border-radius:0.4em;
+ 	text-align:center;
+	background-color:#64b362;
+	font-size:2.5em;
+	behavior: url(/PIE.htc);
+	}   
 
 
 .liste-items{
