--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -73,9 +73,9 @@ body {
 .home .container {
 	background-color:#FFFFFF;
 	border: 0px none;
-	margin-top:0;
+	margin-top:10em;
 	padding-left:0;
-	top: 7em;
+
 }
 
 
@@ -496,8 +496,7 @@ ul.box_menu li.descriptif .text p{
 #header .hornav {
     margin: 0;
     width: 100%;
-    margin-top:0.6em;
-
+    margin-top:4em;
 }
 
 .hornav .menu-items {
@@ -740,7 +739,7 @@ aside.more .h2{
     color: #000000;
     font-size: 1.2em;
     padding: 0.2em;
-    position: relative;
+    position: absolute;
     right: 0.5em;
     text-align: right;
     float:right;
