--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -57,7 +57,7 @@ body {
 
 #header{
 	text-align:center;
-	position:relative;
+	position:absolute;
 	z-index:90;
 	width:100%;
 }
@@ -66,14 +66,14 @@ body {
 	background-color:#ffffff;
 	border-radius: 0.8em;
 	position:relative;
-    margin: 3em 0 6em 0;
+    margin: 0em 0 6em 0;
 	behavior: url(/PIE.htc);
+	top:-3em;
 }
 
 .home .container {
 	background-color:#FFFFFF;
 	border: 0px none;
-	margin-top:10em;
 	padding-left:0;
 
 }
@@ -95,7 +95,9 @@ body {
 	padding: 0 ;
 	behavior: url(/PIE.htc);
 	position:relative;
+	z-index:120;
 }
+
 
 .content p, .content dl, .content ul{	font-size:1.2em;}
 
@@ -127,10 +129,10 @@ body {
 }
 
 .home .content {
-	background-color:#FFFFFF;
+	background-color:transparent;
     width: 100%;
-    min-height: 47em;
-     margin: 0;
+    min-height: 39em;
+    margin: 0;
 }
 
 .home .content-principal{text-align:center; font-size:1.2em;font-weight: bold}
@@ -172,7 +174,9 @@ body {
     width:80%;
     }
 
-
+#header {
+	position:relative;
+    top :-6em;}
 
 #nom_site_spip{
 	line-height:0px;
@@ -183,8 +187,6 @@ body {
    	border-radius: 0.15em;
     behavior: url(/PIE.htc);
     padding: 0.1em 0;
-    position:absolute;
-    top :-2em;
 }
 
 .accueil .h1{
@@ -198,7 +200,6 @@ body {
 	line-height: normal;
 	color:#63B362;
 	position:relative;
-	top:2em;
 }
 
 
@@ -512,9 +513,8 @@ ul.box_menu li.citation .text p{
 }
 
 #header .hornav {
-    margin: 0;
-    width: 100%;
-    margin-top:4em;
+    margin: 1em 0 0 0;
+
 }
 
 .hornav .menu-items {
