barrer le prox et enlever la possibilité df'ajouter dans le panier pour le produis dépendant d'un pack ou dans le panier ou dépendant d'un produit dans le panier

--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -954,6 +954,7 @@ aside.prix {
 	
 .vente img{top:0.1em ;right:0.1em}	
 .vente a.plus{float:right}
+.vente .utilise{text-decoration: line-through}
 #panier_wrap{
 
 	background: #EEC831 ;
